8_Authentication_Authorization_JWT/service_entry_sni_com.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: sni-com
spec:
  hosts:
  - "test.sni.com"
  ports:
  - number: 80
    name: http-port
    protocol: HTTP
  resolution: DNS
