8_Authentication_Authorization_JWT/authorization_policy_httpbin_path.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-path
  namespace: istio-system # If set to root (i.e. "istio-sytem") namespace, the policy applies to all namespaces in a mesh.
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY # reject requests with matching with rules below
  rules:
  - from:
    - source:
        notRequestPrincipals: ["*"] # <---- if request principals (valid JWT) not available in header. Ref: https://istio.io/latest/docs/tasks/security/authentication/authn-policy/#require-a-valid-token
    to:
    - operation:
        paths: ["/headers"] # <---- deny if invalid JWT token for /headers
